# stellarium-srtstreamer-plugin

./: .gitignore  CMakeLists.txt  ChangeLog  README.md
.github/workflows/: build.yml
resources/: SrtStreamer.qrc
src/: CMakeLists.txt  FrameCapture.cpp  FrameCapture.hpp  SrtEncoder.cpp  SrtEncoder.hpp  SrtStreamerModule.cpp  SrtStreamerModule.hpp
src/gui/: SrtStreamerWindow.cpp  SrtStreamerWindow.hpp  SrtStreamerWindow.ui
